sF: wow...loading bar WAY too dark;  fixed field #

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -105,7 +105,7 @@ td {
 }
 
 .loadingBar {
-	background-color: #0000DD;
+	background-color: #8888FF;
 }
 
 #model_table {
